merging main and GUI branches. slowly.
Signed-off-by: Arvid Utas <arvidu@hotmail.com>